2017-08-26  Carl Hetherington  <cth@carlh.net>

	* Stop the player looking for encode servers (#1119).

2017-08-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.19 released.

2017-08-20  Carl Hetherington  <cth@carlh.net>

	* Add VF/OV and KDM support to player.

2017-08-19  Carl Hetherington  <cth@carlh.net>

	* Deal with newly-invalid configured default container ratios
	gracefully.

2017-08-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.18 released.

2017-08-16  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated fr_FR translation from Thierry Journet.

2017-08-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.17 released.

2017-08-10  Carl Hetherington  <cth@carlh.net>

	* Updated pl_PL translation from Mike Mazur.

2017-07-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.16 released.

2017-07-28  Carl Hetherington  <cth@carlh.net>

	* Support a few more SSA style tags.

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.11.15 released.

2017-07-27  Carl Hetherington  <cth@carlh.net>

	* Add option to specify a list of servers in the CLI version (#1104).

2017-07-26  Carl Hetherington  <cth@carlh.net>

	* Multi-threaded decode of DCP when previewing.

2017-07-25  Carl Hetherington  <cth@carlh.net>

	* Configurable config.xml location (#780, #1100).

2017-07-24  Carl Hetherington  <cth@carlh.net>

	* Update ISDCF name when DCP frame rate changes (#1102).

 	* Updated zh_CN translation from 刘汉源.

2017-07-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.14 released.

2017-07-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.13 released.

2017-07-11  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.12 released.

2017-07-04  Carl Hetherington  <cth@carlh.net>

	* Tentative fix for incorrect colours with logarithmic DPX sources.

2017-07-02  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.
