@@ -1,3 +1,7 @@
+2017-08-27  Carl Hetherington  <cth@carlh.net>
+
+	* Fix incorrect ISDCF name in some cases (#1118).
+
 2017-08-26  Carl Hetherington  <cth@carlh.net>
 
 	* Stop the player looking for encode servers (#1119).
